Path changed for some files

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,10 @@
       name="description"
       content="This is an Weather application which shows tha weather by taking city name "
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+ <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    
     <title>Weather App</title>
   </head>
   <body>
